crates/php-parser/tests/snapshots/integration__readonly_intersection_type_property.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
class Foo {
    public readonly Countable&Traversable $prop;
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Property": {
                  "name": "prop",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": true,
                  "type_hint": {
                    "kind": {
                      "Intersection": [
                        {
                          "kind": {
                            "Named": {
                              "parts": [
                                "Countable"
                              ],
                              "kind": "Unqualified",
                              "span": {
                                "start": 38,
                                "end": 47
                              }
                            }
                          },
                          "span": {
                            "start": 38,
                            "end": 47
                          }
                        },
                        {
                          "kind": {
                            "Named": {
                              "parts": [
                                "Traversable"
                              ],
                              "kind": "Unqualified",
                              "span": {
                                "start": 48,
                                "end": 60
                              }
                            }
                          },
                          "span": {
                            "start": 48,
                            "end": 60
                          }
                        }
                      ]
                    },
                    "span": {
                      "start": 38,
                      "end": 60
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 22,
                "end": 65
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 68
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 68
  }
}
