crates/php-parser/tests/snapshots/integration__relative_namespace_names.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
namespace App\Services;
$obj = new namespace\MyClass();
namespace\helper_func();
echo namespace\SOME_CONST;

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "App",
              "Services"
            ],
            "kind": "Qualified",
            "span": {
              "start": 16,
              "end": 28
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 6,
        "end": 30
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "obj"
                },
                "span": {
                  "start": 30,
                  "end": 34
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "New": {
                    "class": {
                      "kind": {
                        "Identifier": "MyClass"
                      },
                      "span": {
                        "start": 41,
                        "end": 58
                      }
                    },
                    "args": []
                  }
                },
                "span": {
                  "start": 37,
                  "end": 60
                }
              }
            }
          },
          "span": {
            "start": 30,
            "end": 60
          }
        }
      },
      "span": {
        "start": 30,
        "end": 62
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "namespace\\helper_func"
                },
                "span": {
                  "start": 62,
                  "end": 83
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 62,
            "end": 85
          }
        }
      },
      "span": {
        "start": 62,
        "end": 87
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Identifier": "namespace\\SOME_CONST"
            },
            "span": {
              "start": 92,
              "end": 112
            }
          }
        ]
      },
      "span": {
        "start": 87,
        "end": 114
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 114
  }
}
