crates/php-parser/tests/snapshots/integration__reserved_names_in_implements.snap
---
source: crates/php-parser/tests/integration.rs
expression: "multi_snapshot(&[\"<?php class A implements self {}\",\n\"<?php class A implements parent {}\", \"<?php class A implements static {}\"],\n|result|\n{\n    assert!(!result.errors.is_empty(), \"Expected parse errors\");\n    format_errors(result)\n},)"
---
--- <?php class A implements self {} ---
cannot use 'self' as class name

--- <?php class A implements parent {} ---
cannot use 'parent' as class name

--- <?php class A implements static {} ---
cannot use 'static' as class name
